tests/ui/generics/issue-83556.stderr
error: lifetime parameters must be declared prior to type and const parameters
  --> $DIR/issue-83556.rs:1:15
   |
LL | struct Foo<T, 'a>(&'a ());
   |           ----^^- help: reorder the parameters: lifetimes, then consts and types: `<'a, T>`

error[E0392]: parameter `T` is never used
  --> $DIR/issue-83556.rs:1:12
   |
LL | struct Foo<T, 'a>(&'a ());
   |            ^ unused parameter
   |
   = help: consider removing `T`, referring to it in a field, or using a marker such as `PhantomData`
   = help: if you intended `T` to be a const parameter, use `const T: usize` instead

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0392`.
