tests/ui/generics/issue-83556.rs
struct Foo<T, 'a>(&'a ());
//~^ ERROR lifetime parameters must be declared prior to
//~| ERROR parameter `T` is never used

fn main() {}
